@@ -70,6 +70,8 @@ New features:
     tile or vector size without reallocating the buffer.
   * Application can change the allocation used by StarPU with
     starpu_malloc_set_hooks()
+  * XML output for starpu_perfmodel_display and starpu_perfmodel_dump_xml()
+    function
 
 Small features:
   * Scheduling contexts may now be associated a user data pointer at creation
